--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-* {
-box-sizing: border-box};
-
 body,
 html {
     padding: 0;
@@ -206,34 +203,27 @@ p {
 
 }
 
+footer {background: white;
+    width: 100%;
+    margin: auto;
+bottom: 0;
+    position: fixed;
+padding: 20px;}
 
+.conteudo { display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    font: helvetica;
+    font-family: sans-serif;}
 
+.imagem {width: 70%;
+}
 
+.mapa {margin-top: 70px;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+h3{text-align: center;
+    background-color: beige,
+margin-bottom: 0;
+}
 
 
 @media screen and (max-width: 800px) {
@@ -364,5 +354,5 @@ p {
     height: 8em;
     margin-bottom: 20px;
 }
-
+    
 }
