--- a/main.css
+++ b/main.css
@@ -356,3 +356,67 @@ margin-bottom: 0;
 }
     
 }
+
+
+/*_________________Home -  quote*/
+
+.imagem{
+    width: 100%;
+    height: 400px;
+    background-image: url(icons/bookcase_quote.jpg);
+    color: #fff;
+    background-size: cover;
+    margin-top: 20px;
+}
+
+#quote{
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 10%;
+}
+
+/*_________________Home -  quote*/
+
+/*__________HOME_sobre, base dados, requesitar*/
+
+.minimenu{
+    width: auto;
+    background-color: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+    .minimenu {
+        flex-direction: column;
+        text-align: center;
+        align-content: center;
+    }
+}
+
+
+.mini{
+    background-color: white;
+    width: 300px;
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .mini {
+        margin: 6px auto;   
+    }
+}
+
+.mini p{
+    background-color: #08654b;
+    padding: 20px 10px ;
+    margin: 10px 20px;
+    }
+
+/*__________HOME sobre, base dados, requesitar*/
+
