--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body,
 html {
     padding: 0;
@@ -17,8 +21,11 @@ html {
 }
 
 span {
+    margin-left: 5px;
     font-weight: 200;
+    position: absolute;
 }
+
 
 .container {
     width: 100%;
@@ -31,29 +38,20 @@ header {
     background: white;
     padding: 20px;
     position: relative;
-    border-top: 4px solid green;
-    margin: auto;
-    display: flex;
+    border-top: 4px solid darkgreen;
     text-align: center;
 }
 
-
-.nav {
-    height: auto;
-    display: contents;
-    position: absolute;
-    text-align: center;
-}
 
 .nav li {
+    position: relative;
     text-decoration: none;
     display: inline-block;
-    padding: 0 20px;
+    padding: 0 40px;
 }
 
 .nav a {
-    padding: 0;
-    margin: 0px 0px;
+    position: relative;
     color: green;
     font-size: 14px;
     display: block;
@@ -67,141 +65,148 @@ header {
     color: grey;
 }
 
-.nav li {
-    text-decoration: none;
-}
 
 .sub-menu {
+    right: -10%;
+    left: -10%;
     display: block;
     position: absolute;
     background: white;
-    text-align: left;
+    box-shadow: 0 5px 5px -5px lightgrey;
     padding: 0;
     margin-top: 20px;
 }
 
+
 .sub-menu li {
     display: block;
-    padding: 15px 20px;
+    padding: 20px;
     text-align: center;
 }
 
-.intro {
+/* MENU TERMINA AQUI */
+
+.block {
+    overflow: hidden;
     padding: 20px;
-    margin: 40px 80px;
+    margin: 40px;
     background: white;
     text-align: center;
 }
 
-.intro p {
-    padding: 0px 100px;
-}
-
 h2 {
+    text-align: left;
     text-transform: uppercase;
     font-size: 20px;
     letter-spacing: 4px;
 }
 
 p {
+    text-align: left;
     color: grey;
     font-size: 12px;
     font-weight: 300;
-    margin: 20px;
 }
 
-.block {
-    display: flex;
-    flex-direction: row;
-    margin: 40px 80px;
+.skill {
+    width: 45%;
+    float: left;
+    text-align: left;
+
 }
 
-#img {
-    width: auto;
-    height: 200px;
+.block img {
+    float: right;
+    width: 50%;
+    height: auto;
     -webkit-filter: grayscale(100%);
     /* Safari 6.0 - 9.0 */
     filter: grayscale();
 }
 
-#text {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
-    background-color: white;
-    text-align: left;
-    padding: 20px;
+.buttons {
+    display: inline-block;
 }
 
-#text p {
-    text-align: left;
-    margin: 0;
-
-}
-
-.form-wrapper {
-    background: white;
-    margin: 40px 80px;
-    padding: 20px;
-    box-sizing: border-box;
-    
-}
-
-.contact form {
-    display: grid;
-    grid-gap: 20px;
-}
-
-.contact form p {
-    margin: 0;
-    text-transform: uppercase;
-}
-
-.contact-p {
-    margin: 0;
-}
-
-
-.submit-btn {
-    grid-column: 2/3;
-}
-
-
-
-.contact form button,
-.contact form input,
-.contact form textarea {
-    width: 100%;
-    height: 30px;
-    border: 2px solid darkgreen;
-}
-
-.contact form textarea  {
-    resize: none;
-    height: 100px;
-}
-
-.contact form button {
-    width: 100%;
-    background: darkgreen;
+.green-button {
     border: 0;
-    font-weight: 600;
+    margin: 20px;
+    height: 40px;
+    width: 100px;
+    background: darkgreen;
     color: white;
     text-transform: uppercase;
-    font-size: 16px;
+    letter-spacing: 4px;
+}
+
+.green-button:hover {
+    background: white;
+    color: darkgreen;
+    transition: background-color 1s ease-out;
+}
+
+/* CONTACTO */
+
+.contact {
+    width: 45%;
+    margin-right: 20px;
+    float: left;
+}
+
+.block form {
+    width: 50%;
+    float: right;
+    margin-bottom: 10px;
+}
+
+.block form p {
+    margin: 0;
+    text-transform: uppercase;
+}
+
+label {
+    display: inline-block;
+    margin: 10px 0px;
+    color: darkgreen;
+
+}
+
+.submit-btn {
+    grid-column: 1/3;
+}
+
+.block form button,
+.block form input,
+.block form textarea {
+    padding: 10px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid darkgrey;
+}
+
+.block form textarea {
+    resize: none;
+    height: 60px;
+}
+
+.block form button {
+    border: 1px solid darkgrey;
+    background: white;
+    font-weight: 300;
+    color: grey;
+    text-transform: uppercase;
+    font-size: 12px;
     letter-spacing: 2px;
 }
 
 
-.contact form button:hover,
-.contact form button:focus {
-    background: lightgreen;
-    color: #000;
-    outline: 0;
+.block form button:hover,
+.block form button:focus {
+    background: darkgreen;
+    color: white;
     transition: background-color 1s ease-out;
-
 }
+
 
 footer {background: white;
     width: 100%;
@@ -226,14 +231,13 @@ margin-bottom: 0;
 
 
 @media screen and (max-width: 800px) {
-    .nav {
-        width: 100%;
+  .nav {
         clear: both;
         position: absolute;
         top: 100%;
         right: 0%;
-        display: inline-block;
         text-align: center;
+        vertical-align: middle;
         width: 100%;
         background: white;
         clip-path: circle(0px at top right);
@@ -241,7 +245,13 @@ margin-bottom: 0;
         transition: clip-path ease-in-out 800ms;
     }
 
-    /* o clip path faz a animação - não alterar isto novamente*/
+    .menu-toggle {
+        margin-top: 24px;
+        float: right;
+        cursor: pointer;
+        top: 0;
+        right: 0;
+    }
     .nav-open {
         clip-path: circle(250% at top right);
         display: block;
@@ -252,7 +262,6 @@ margin-bottom: 0;
         padding: 0;
         list-style: none;
     }
-
 
     .nav li {
         text-decoration: none;
@@ -280,28 +289,19 @@ margin-bottom: 0;
         color: darkseagreen;
     }
 
-    .menu-toggle {
-        cursor: pointer;
-        padding: 16px;
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .hamburger {
-        margin-top: 12px;
-    }
-
     .sub-menu {
+        left: 0;
         display: block;
         position: relative;
+        box-shadow: none;
     }
-
+    
     .sub-menu li {
         display: block;
         margin: 0;
         text-align: center;
     }
+
 
     .hamburger,
     .hamburger::before,
@@ -335,26 +335,40 @@ margin-bottom: 0;
         transform: translateY(-3px) rotate(-90deg);
     }
 
+
     .block {
         flex-direction: column;
     }
 
-    #img {
+    .block img {
         width: 100%;
         height: auto;
+        margin-bottom: 20px;
     }
 
-    .contact form {
-        display: block;
+    .skill {
+        margin: 0;
+        width: 100%;
     }
-    
-    .contact form textarea   {
-    resize: none;
-    height: 8em;
-    margin-bottom: 20px;
+
+    .contact {
+        float: none;
+        width: 100%;
+    }
+
+    .block form {
+        width: 100%;
+        float: none;
+    }
+
+    h2,
+    p,
+    .skill {
+        text-align: center;
+    }
+
 }
-    
-}
+
 
 
 /*_________________Home -  quote*/
