--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    list-style: none;
 }
 
 body,
@@ -87,6 +88,35 @@ header {
 
 /* MENU TERMINA AQUI */
 
+/* HOMEPAGE */
+
+.imagem {
+    width: 100%;
+    height: 400px;
+    background-image: url(img/bookcase_quote.jpg);
+    color: #fff;
+    background-size: cover;
+    margin-top: 20px;
+}
+
+#quote {
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 10%;
+}
+
+
+.minimenu {
+    width: auto;
+    background-color: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/* ABOUT */
+
 .block {
     overflow: hidden;
     padding: 20px;
@@ -145,8 +175,6 @@ p {
     color: darkgreen;
     transition: background-color 1s ease-out;
 }
-
-/* CONTACTO */
 
 .contact {
     width: 45%;
@@ -208,50 +236,89 @@ label {
     transition: background-color 1s ease-out;
 }
 
+/* ABOUT TERMINA AQUI */
 
-footer {background: white;
+/* PÁGINA ACESSO */
+
+#acesso_titulo {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+    font-size: 25px;
+}
+
+.acesso_main {
+    margin: 40px;
+    padding: 20px;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    justify-items: center;
+}
+
+.acesso {
+    width: 300px;
+    text-align: center;
+    font-size: 14px;
+    color: darkgray;
+}
+
+.titulos {
+    border: 3px solid #08654b;
+    padding: 10px;
+    text-align: center;
+}
+
+
+
+
+/* FOOTER */
+
+footer {
+    background: white;
     width: 100%;
     margin: auto;
-bottom: 0;
-padding: 20px;}
-
-.conteudo { display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-    font: helvetica;
-    font-family: sans-serif;}
-
-.imagemipca {width: 70%;
-    margin-top: 0px;
-    margin-left: -30px;
+    bottom: 0;
+    padding: 40px 40px 10px 40px;
 }
 
-.mapa {margin-top: 10px;
-width: 90%}
-
-h3{text-align: center;
-    background-color: beige,
-margin-bottom: 0;
-    font-size: 15px;
+.conteudo {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-
-p{
-    
-    line-height: 2px;
+.box {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-h2{
-    
-    line-height: 50px;
-    margin-left: 21px;
+.conteudo h2,
+p {
+    text-align: center;
 }
 
+.imagemipca {
+    width: 40%;
 
+}
+
+.box div {
+    margin-bottom: 20px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+/* FOOTER TERMINA AQUI */
 
 /* PARTE RESPONSIVA */
 
 @media screen and (max-width: 800px) {
-  .nav {
+    .nav {
         clear: both;
         position: absolute;
         top: 100%;
@@ -315,7 +382,7 @@ h2{
         position: relative;
         box-shadow: none;
     }
-    
+
     .sub-menu li {
         display: block;
         margin: 0;
@@ -387,109 +454,50 @@ h2{
         text-align: center;
     }
 
-}
-
-
-
-/*_________________Home -  quote*/
-
-.imagem{
-    width: 100%;
-    height: 400px;
-    background-image: url(icons/bookcase_quote.jpg);
-    color: #fff;
-    background-size: cover;
-    margin-top: 20px;
-}
-
-#quote{
-    width: 100%;
-    font-size: 30px;
-    text-align: center;
-    padding-top: 10%;
-}
-
-/*_________________Home -  quote*/
-
-/*__________HOME_sobre, base dados, requesitar*/
-
-.minimenu{
-    width: auto;
-    background-color: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-@media screen and (max-width: 480px) {
-    .minimenu {
-        flex-direction: column;
-        text-align: center;
-        align-content: center;
+    .conteudo {
+        grid-template-columns: 1fr;
     }
-}
 
 
-.mini{
-    background-color: white;
-    width: 300px;
-    margin: 20px;
-    padding: 20px;
-    text-align: center;
-    color: white;
-}
+    @media screen and (max-width: 480px) {
+        .minimenu {
+            flex-direction: column;
+            text-align: center;
+            align-content: center;
+        }
+    }
 
-@media screen and (max-width: 480px) {
+
     .mini {
-        margin: 6px auto;   
-    }
-}
-
-.mini p{
-    background-color: #08654b;
-    padding: 20px 10px ;
-    margin: 10px 20px;
+        background-color: white;
+        width: 300px;
+        margin: 20px;
+        padding: 20px;
+        text-align: center;
+        color: white;
     }
 
-/*__________HOME sobre, base dados, requesitar*/
+    @media screen and (max-width: 480px) {
+        .mini {
+            margin: 6px auto;
+        }
+    }
 
-/*________Acesso Livre*/
-#acesso_titulo{
-    grid-column-start:1; 
-    grid-column-end: 4;
-    text-align: center;
-    font-size: 25px;
-}
-
-.acesso_main{
-    width: 100%;
-    background-color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 10px;
-    justify-items: center;
-}
-.acesso{
-    width: 270px;
-    text-align: center;
-    font-size: 14px;
-    color: darkgray;
-}
-
-.titulos{
-    border: 3px solid #08654b;
-    padding: 10px;
-    text-align: center;
-}
+    .mini p {
+        background-color: #08654b;
+        padding: 20px 10px;
+        margin: 10px 20px;
+    }
 
 
-@media screen and (max-width: 480px) {
+    /*responsivo acesso*/
     .acesso_main {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
 }
 
-/*________FIM Acesso Livre*/
+/* parte responsiva termina aqui */
 
