--- a/main.css
+++ b/main.css
@@ -114,11 +114,29 @@ header {
 
 .minimenu {
     width: auto;
-    background-color: none;
+    background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding: 20px;
+    margin: 40px;
 }
+
+.mini{
+    background-color: none;
+    width: 300px;
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+.mini p{
+    color: white;
+    background-color: #08654b;
+    padding: 20px 10px ;
+    margin: 10px 20px;
+    }
+
 
 /* ABOUT */
 
